# diff-pdf-commits

./: .editorconfig  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/diff_pdf_commits/: __init__.py  cli.py  config.py  errors.py  file_config.py  git.py  process.py  runner.py
tests/: test_config.py  test_file_config.py  test_integration_no_diff.py
tests/fixtures/docker-groff-pdf/: Dockerfile  build-pdf
