[project]
name = "diff-pdf-commits"
version = "0.1.0"
description = "Compare PDFs built from two git commits by running a user-provided build command."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Artem" }
]
keywords = ["pdf", "git", "diff", "latex", "diff-pdf"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Utilities",
]
dependencies = [
  "click>=8.1,<9",
]

[project.optional-dependencies]
dev = [
  "black==26.3.1",
  "pytest==9.0.3",
  "pytest-cov==7.1.0",
]

[project.scripts]
diff-pdf-commits = "diff_pdf_commits.cli:main"
pdf-commit-diff = "diff_pdf_commits.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
